--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ p{
   text-align: center;
 }
 
-
 #first{
   margin-top: 70px;
   margin-bottom: 30px;
@@ -42,12 +41,16 @@ p{
   margin-bottom: 30px;
 }
 
-/* Perchè Cademi */
-
 .img-fix{
 background-color: #428bca;
 border-radius: 50%;
 padding: 30px;
 margin: 50px 0 20px 0;
 height: 260px;
+}
+
+/* versione tablet ed telefono */
+
+.col-xs-12 img{
+  padding-top: 20px;
 }
